loading(popup) Jquery complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
@@ -21,7 +23,7 @@
                 </div>
             </div>
 
-            <button id="close" onclick="close_f();">닫기</button>
+            <button id="close">닫기</button>
         </div>
     </div>
 
@@ -99,7 +101,7 @@
             </table>
 
             <div id="button">
-                <button id="loading" type="button" onclick="loading_f();">불러오기</button>
+                <button id="loading" type="button">불러오기</button>
                 <button id="result" type="button" onclick="result_f();">결과보기</button>
                 <input id="reset" type="reset" value="초기화">
             </div>
