--- a/index.html
+++ b/index.html
@@ -35,39 +35,39 @@
 
             <table border="1px" id="password_plate">
                 <tr>
-                    <td><input type="text" class="password" name="p1" readonly></td>
-                    <td><input type="text" class="password" name="p2" readonly></td>
-                    <td><input type="text" class="password" name="p3" readonly></td>
-                    <td><input type="text" class="password" name="p4" readonly></td>
-                    <td><input type="text" class="password" name="p5" readonly></td>
+                    <td><input type="text" class="password" id="p1" readonly></td>
+                    <td><input type="text" class="password" id="p2" readonly></td>
+                    <td><input type="text" class="password" id="p3" readonly></td>
+                    <td><input type="text" class="password" id="p4" readonly></td>
+                    <td><input type="text" class="password" id="p5" readonly></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="password" name="p6" readonly></td>
-                    <td><input type="text" class="password" name="p7" readonly></td>
-                    <td><input type="text" class="password" name="p8" readonly></td>
-                    <td><input type="text" class="password" name="p9" readonly></td>
-                    <td><input type="text" class="password" name="p10" readonly></td>
+                    <td><input type="text" class="password" id="p6" readonly></td>
+                    <td><input type="text" class="password" id="p7" readonly></td>
+                    <td><input type="text" class="password" id="p8" readonly></td>
+                    <td><input type="text" class="password" id="p9" readonly></td>
+                    <td><input type="text" class="password" id="p10" readonly></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="password" name="p11" readonly></td>
-                    <td><input type="text" class="password" name="p12" readonly></td>
-                    <td><input type="text" class="password" name="p13" readonly></td>
-                    <td><input type="text" class="password" name="p14" readonly></td>
-                    <td><input type="text" class="password" name="p15" readonly></td>
+                    <td><input type="text" class="password" id="p11" readonly></td>
+                    <td><input type="text" class="password" id="p12" readonly></td>
+                    <td><input type="text" class="password" id="p13" readonly></td>
+                    <td><input type="text" class="password" id="p14" readonly></td>
+                    <td><input type="text" class="password" id="p15" readonly></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="password" name="p16" readonly></td>
-                    <td><input type="text" class="password" name="p17" readonly></td>
-                    <td><input type="text" class="password" name="p18" readonly></td>
-                    <td><input type="text" class="password" name="p19" readonly></td>
-                    <td><input type="text" class="password" name="p20" readonly></td>
+                    <td><input type="text" class="password" id="p16" readonly></td>
+                    <td><input type="text" class="password" id="p17" readonly></td>
+                    <td><input type="text" class="password" id="p18" readonly></td>
+                    <td><input type="text" class="password" id="p19" readonly></td>
+                    <td><input type="text" class="password" id="p20" readonly></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="password" name="p21" readonly></td>
-                    <td><input type="text" class="password" name="p22" readonly></td>
-                    <td><input type="text" class="password" name="p23" readonly></td>
-                    <td><input type="text" class="password" name="p24" readonly></td>
-                    <td><input type="text" class="password" name="p25" readonly></td>
+                    <td><input type="text" class="password" id="p21" readonly></td>
+                    <td><input type="text" class="password" id="p22" readonly></td>
+                    <td><input type="text" class="password" id="p23" readonly></td>
+                    <td><input type="text" class="password" id="p24" readonly></td>
+                    <td><input type="text" class="password" id="p25" readonly></td>
                 </tr>
             </table>
         </div>
