암호화 함수 complete

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <div id="button">
                 <button id="loading" type="button">불러오기</button>
                 <button id="result" type="button" onclick="result_f();">결과보기</button>
+                <button id="save" type="button" onclick="save_f();">저장하기</button>
                 <input id="reset" type="reset" value="초기화">
             </div>
         </div>
