--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <tr>
                     <td class="text">결&nbsp;&nbsp;&nbsp;과</td>
                     <td class="input_text">
-                        <input type="text" id="result" name="result" placeholder="결과">
+                        <input type="text" id="result" name="result" placeholder="결과" readonly>
                     </td>
                 </tr>
                 <tr>
